--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Clock_compass</title>
     <link rel="stylesheet" href="/src/time.css">
 </head>
@@ -12,9 +10,7 @@
 <body>
     <div id="clock"></div>
     <script src="/src/time.js"></script>
-    <audio src="/src/小星星-红黑.mp3" autoplay="autoplay" loop="loop">
-        Your browser does not support the audio element.
-    </audio>
+    <audio src="/src/小星星-红黑.mp3" autoplay="autoplay" loop="loop"></audio>
 </body>
 
 </html>
