--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Clock_compass</title>
-    <link rel="stylesheet" href="/src/time.css">
+    <link rel="stylesheet" href="./src/time.css">
 </head>
 
 <body>
-    <div id="clock"></div>
-    <script src="/src/time.js"></script>
-    <audio src="/src/小星星-红黑.mp3" autoplay="autoplay" loop="loop"></audio>
+<div id="clock"></div>
+    <script src="./src/time.js"></script>
+    <audio src="./src/小星星-红黑.mp3" id="music" autoplay="autoplay" loop="loop"></audio>
 </body>
-
 </html>
